Unify basic and advanced configurations
