# apiserver/model_configuration.go
@@ -9,8 +9,8 @@
 
 package apiserver
 
-// BasicConfiguration - The Basic Configurations for running a SAML 2.0 Service Provider
-type BasicConfiguration struct {
+// Configuration - The Configurations for running a SAML 2.0 Service Provider
+type Configuration struct {
 
 	// Configuration Id. Can only be 1
 	Id int32 `json:"id,omitempty"`
@@ -35,14 +35,32 @@ type BasicConfiguration struct {
 
 	// If enabled, the new created user is archived and cannot login until a admin has activated it.
 	UserToArchive bool `json:"userToArchive,omitempty"`
+
+	// If the configuration is enabled or not
+	AllowInitializationByIdp bool `json:"allowInitializationByIdp,omitempty"`
+
+	// If the SP should make a signed SAML Authn-Request or not
+	SignedRequest bool `json:"signedRequest,omitempty"`
+
+	// Normaly this value is set to false for a SP. If set to true the user has to re-authenticate (login at IdP) even it has a valid session to the IdP.
+	ForceAuthn bool `json:"forceAuthn,omitempty"`
+
+	// If you have to use a customized Entity Id, you can overwrite it here. Normaly the default value can be leave as it is.
+	EntityId string `json:"entityId,omitempty"`
+
+	// only send cookies over encrypted connection (HTTPS)
+	CookieSecure bool `json:"cookieSecure,omitempty"`
+
+	// The url to redirect if the login failed. If this value is null the default page /noLogin will showed up
+	LoginFailedUrl string `json:"loginFailedUrl,omitempty"`
 }
 
-// AssertBasicConfigurationRequired checks if the required fields are not zero-ed
-func AssertBasicConfigurationRequired(obj BasicConfiguration) error {
+// AssertConfigurationRequired checks if the required fields are not zero-ed
+func AssertConfigurationRequired(obj Configuration) error {
 	return nil
 }
 
-// AssertBasicConfigurationConstraints checks if the values respects the defined constraints
-func AssertBasicConfigurationConstraints(obj BasicConfiguration) error {
+// AssertConfigurationConstraints checks if the values respects the defined constraints
+func AssertConfigurationConstraints(obj Configuration) error {
 	return nil
 }
