# openapi.yaml
@@ -63,7 +63,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Active'
+                $ref: "#/components/schemas/Active"
 
   /sso/auth:
     get:
@@ -94,71 +94,38 @@ paths:
         "302":
           description: SAML response returned from the IdP redirected to the auth endpoint to logout
 
-  /configuration/basic:
+  /configuration:
     get:
       tags:
         - Configuration
-      summary: Get Basic Configurations
-      description: Get all the Basic Configuration which the SAML SP needs to work.
-      operationId: getBasicConfiguration
+      summary: Get Configurations
+      description: Get all the Configuration which the SAML SP needs to work.
+      operationId: getConfiguration
       responses:
         "200":
           description: Successfully returned all basic configuration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BasicConfiguration'
+                $ref: "#/components/schemas/Configuration"
     put:
       tags:
         - Configuration
-      summary: Creates or Update Basic Configuration
-      description: Creates or Update the Basic Configuration which the SAML SP needs to work.
-      operationId: putBasicConfiguration
+      summary: Creates or Update Configuration
+      description: Creates or Update the Configuration which the SAML SP needs to work.
+      operationId: putConfiguration
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/BasicConfiguration'
+              $ref: "#/components/schemas/Configuration"
       responses:
         "200":
           description: Successfully created / updated the basic configuration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BasicConfiguration'
-
-  /configuration/advanced:
-    get:
-      tags:
-        - Configuration
-      summary: Get Advanced Configuration
-      description: Get all the Advanced Configuration for the SAML SP (optional options).
-      operationId: getAdvancedConfiguration
-      responses:
-        "200":
-          description: Successfully returned all advanced configuration
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AdvancedConfiguration'
-    put:
-      tags:
-        - Configuration
-      summary: Creates or Update Advanced Configuration
-      description: Creates or Update the Advanced Configuration for the SAML SP (optional options).
-      operationId: putAdvancedConfiguration
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AdvancedConfiguration'
-      responses:
-        "200":
-          description: Successfully created / updated the advanced configuration
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AdvancedConfiguration'
+                $ref: "#/components/schemas/Configuration"
 
   /configuration/attribute-mapping:
     get:
@@ -173,7 +140,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AttributeMap'
+                $ref: "#/components/schemas/AttributeMap"
     put:
       tags:
         - Configuration
@@ -184,14 +151,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AttributeMap'
+              $ref: "#/components/schemas/AttributeMap"
       responses:
         "200":
           description: Successfully created / updated the attribute mapping configuration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AttributeMap'
+                $ref: "#/components/schemas/AttributeMap"
 
   /configuration/permission-mapping:
     get:
@@ -206,7 +173,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Permissions'
+                $ref: "#/components/schemas/Permissions"
     put:
       tags:
         - Configuration
@@ -217,14 +184,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Permissions'
+              $ref: "#/components/schemas/Permissions"
       responses:
         "200":
           description: Successfully created / updated the permission mapping configuration
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Permissions'
+                $ref: "#/components/schemas/Permissions"
 
   /version:
     get:
@@ -258,9 +225,9 @@ paths:
 
 components:
   schemas:
-    BasicConfiguration:
+    Configuration:
       type: object
-      description: The Basic Configurations for running a SAML 2.0 Service Provider
+      description: The Configurations for running a SAML 2.0 Service Provider
       properties:
         id:
           type: integer
@@ -281,8 +248,7 @@ components:
           type: string
           nullable: false
           readOnly: false
-          example:
-            "-----BEGIN CERTIFICATE-----
+          example: "-----BEGIN CERTIFICATE-----
             MIIEGzCCAwOgAwIBAgIUc/HUg5byijWRmU7Qqe5OSQtiNOwwDQYJKoZIhvcNAQEL
             BQAwgZwxCzAJBgNVBAYTAkNIMQ8wDQYDVQQIDAZadXJpY2gxEzARBgNVBAcMCldp
             bnRlcnRodXIxEjAQBgNVBAoMCUxlaWNvbSBBRzEXMBUGA1UECwwOU21hcnQgQnVp
@@ -311,8 +277,7 @@ components:
           type: string
           nullable: false
           readOnly: false
-          example:
-            "-----BEGIN PRIVATE KEY-----
+          example: "-----BEGIN PRIVATE KEY-----
             ****************************************************************
             ****************************************************************
             ****************************************************************
@@ -361,19 +326,6 @@ components:
           readOnly: false
           default: false
           example: false
-
-    AdvancedConfiguration:
-      type: object
-      description: Advanced options to fine tune this SAML Service Provider (SP)
-      properties:
-        id:
-          type: integer
-          format: int32
-          description: Configuration Id refer to basic config's id. Can only be 1
-          nullable: false
-          readOnly: true
-          default: 1
-          example: 1
         allowInitializationByIdp:
           description: If the configuration is enabled or not
           type: boolean
@@ -474,34 +426,34 @@ components:
           type: string
           readOnly: false
           nullable: false
-          default: 'regular'
-          example: 'regular'
+          default: "regular"
+          example: "regular"
         default_proj_role:
           type: string
           nullable: false
           readOnly: false
-          default: 'operator'
-          example: 'operator'
+          default: "operator"
+          example: "operator"
         system_role_saml_attribute:
           type: string
           nullable: true
           readOnly: false
-          example: 'systemRightsSamlAttribute'
+          example: "systemRightsSamlAttribute"
         system_role_map:
           type: array
           items:
-            $ref: '#/components/schemas/RoleMap'
+            $ref: "#/components/schemas/RoleMap"
           nullable: true
           readOnly: false
         proj_role_saml_attribute:
           type: string
           nullable: true
           readOnly: false
-          example: 'projectRightsSamlAttribute'
+          example: "projectRightsSamlAttribute"
         proj_role_map:
           type: array
           items:
-            $ref: '#/components/schemas/RoleMap'
+            $ref: "#/components/schemas/RoleMap"
           nullable: true
           readOnly: false
 
@@ -512,11 +464,11 @@ components:
         elionaRole:
           type: string
           nullable: false
-          example: 'admin'
+          example: "admin"
         samlValue:
           type: string
           nullable: false
-          example: 'Administrator'
+          example: "Administrator"
 
     Active:
       type: object
